@@ -20,6 +20,7 @@
 - Relative paths are preserved when adding directories to the file list
 - Option to list only top-level directory or all files individually in file list
 - Option to strip binary files in build
+- Only center progress dialog on parent if not manually moved by user
 
 0.7.12
 - Fixes:
